fix: alignment checkbox

--- a/frontend/src/style/checkout.css
+++ b/frontend/src/style/checkout.css
@@ -39,6 +39,7 @@
 .checkout-form-box.checkbox-box {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 .checkout-form-input {
@@ -52,8 +53,6 @@
 .checkbox-area {
   width: 48px;
   aspect-ratio: 1/1;
-  display: flex;
-  align-items: center;
 }
 
 .checkout-form-input.checkbox {
